# HERO_SQUARE

./: .gitignore  CMakeLists.txt  Untitled Diagram.drawio
HERO_SQUARE/: HERO_SQUARE.pro  body.cpp  body.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  loadgame.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pausewindow.cpp  pausewindow.h  pausewindow.ui  sounds.qrc  trainingwindow.cpp  trainingwindow.h  trainingwindow.ui  widget.h
